# Bilging-Cpp

./: Bilging  Board.cpp  Board.hpp  CMakeLists.txt  Defs.hpp  Generator.hpp  Helpers.hpp  Searcher.cpp  Searcher.hpp  main.cpp
